# windows-namedpipe-test-rs

./: Cargo.toml  build.rs
src/: main.rs
