[package]
name = "windows-namedpipe-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytes = "1.7.1"
futures = "0.3.30"
prost = "0.13.1"
prost-types = "0.13.1"
serde =  { version = "1.0.209", features = ["derive"] }
tokio = {version = "1.39.3", features = ["net", "sync", "windows-sys", "rt", "rt-multi-thread"]}
tonic = "0.12.2"
windows = { version = "0.58.0", features = ["Win32_Storage_FileSystem"] }


[build-dependencies]
anyhow = "1.0.86"
tonic-build = { version = "0.12", default-features = false, features = ["prost"] }
prost-build = "0.13"
rustc_version = "0.4"
